feat: added log pattern and refactored code.